独立出css文件，并压缩

--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,13 @@
   <title>起步</title>
 </head>
 <body>
+  <ul>
+    <li class="test">1</li>
+    <li class="test">2</li>
+    <li class="test">3</li>
+    <li class="test">4</li>
+    <li class="test">5</li>
+    <li class="test">6</li>
+  </ul>
 </body>
 </html>
